Fixed bug which causes scrollbars to show when you hover over a node in the corner.

--- a/war/css/main.css
+++ b/war/css/main.css
@@ -12,6 +12,7 @@ body {
   font-family:"Verdana", Verdana, Arial;
   line-height: 1.2;
   color: #0f116d;
+  overflow: hidden;
   -moz-user-select: none;
   -khtml-user-select: none;
 }
